ui/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: classification-ui
  labels:
    app.kubernetes.io/part-of: classification-service
    purpose: dev-test-ui
